[project]
name = "sms-counter"
dynamic = ["version"]
description = "SMS Character Counter"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Valentin Henon", email = "vhenon@mindbaz.com" }
]
urls = { repository = "https://github.com/Sweego-io/python-sms-counter" }
requires-python = ">=3.9"
dependencies = [
    "pydantic",
]

[tool.setuptools.dynamic]
version = { attr = "sms.counter.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = [
    "sms.counter",
]
